# hello-test

./: .dockerignore:  .env.example  .gitignore  Dockerfile  README.md  active_search_users.py  backup_profiles.py  check_chat_activity.py  check_field_types.py  check_leak.py  check_mill_corn.py  check_raw.py  check_scores.py  check_sources.py  clear_seen.py  debug_user.py  deep_check.py  delivery_analysis.py  docker-compose.yml  fix_mill_corn.py  last_cycle_stats.py  list_users.py  profiles_backup.json  provision_habr.py  provision_new_sources.py  provision_remote_sources.py  pyproject.toml  test_db.py  test_matcher_cache.py  usage_analysis.py  wipe_user.py
alembic/: env.py
alembic/versions/: 39dcd2188b85_add_profile_ready_for_search_flag.py  5d0b33d7c312_add_dedup_fields_to_seen_vacancies.py  5e2eee7491b5_initial_schema.py  cd59e2dfe9d1_add_career_site_source_type.py
scripts/: test_fetch_career.py  test_fetch_hh.py  test_fetch_tg.py  test_matcher.py
src/: config.py  main.py
src/agents/: matcher.py  profile_agent.py  profile_agent_prompt.py  profile_agent_tools.py
src/bot/: vacancy_message.py
src/bot/handlers/: admin.py  commands.py  cv_upload.py  payments.py  profile_edit.py  reactions.py  voice.py
src/db/: models.py  session.py
src/services/: billing.py  claude.py  dedup.py  prefilter.py  profile_validation.py  source_provisioning.py  sources_service.py  subscription.py  tribute.py  whisper.py
src/sources/: base.py  career_sites.py  channels_config.py  hh_ru.py  telegram_channel.py
src/web/: server.py
src/workers/: job_search.py
